[tool.poetry]
name = "polybar-gmail"
version = "0.2.1"
description = "Polybar module to show unread messages from Gmail"
authors = ["Vyacheslav Konovalov <crabvk@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.7"
google-api-python-client = "^2.100.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"

[tool.poetry.dev-dependencies]
pip = "^23.2.1"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry>=1.6.0"]
build-backend = "poetry.masonry.api"

[tool.autopep8]
max_line_length = 100
